# sui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.claude/: settings.local.json
.codex/environments/: environment-2.toml
.github/workflows/: pages.yml
bindings/: widgets.sui  widgets.toml
bindings/templates/: js_widgets.rs.in  python_widgets.rs.in
crates/sui/: Cargo.toml
crates/sui-animation/: Cargo.toml
crates/sui-animation/src/: lib.rs
crates/sui-avif/: Cargo.toml
crates/sui-avif/src/: lib.rs
crates/sui-bindings-core/: Cargo.toml
crates/sui-bindings-core/src/: lib.rs
crates/sui-core/: Cargo.toml
crates/sui-core/src/: clipboard.rs  color.rs  dpi.rs  drag.rs  error.rs  event.rs  geometry.rs  id.rs  invalidation.rs  lib.rs  semantics.rs
crates/sui-debug/: Cargo.toml
crates/sui-debug/src/: lib.rs
crates/sui-demo/: Cargo.toml
crates/sui-demo/assets/: NotoSansCJK-LICENSE  README.md
crates/sui-demo/src/: animation_demo.rs  app.rs  artifacts.rs  command_demo.rs  drag_drop_demo.rs  layout_demo.rs  lib.rs  main.rs  markdown_demo.rs  paint_demo.rs  text_render_snapshot.rs  theme_editor_demo.rs  vector_demo.rs
crates/sui-demo/src/widget_book/: mod.rs  visual_artifacts.rs
crates/sui-demo/tests/: desktop_e2e.rs  native_interaction_state.rs
crates/sui-demo/web/: README.md  Trunk.toml  asset-cache-worker.js  compression-loader.js  index.html  prepare-dist.mjs
crates/sui-dev/: Cargo.toml
crates/sui-dev/src/: app.rs  drag_drop_demo.rs  layout_demo.rs  lib.rs  main.rs  paint_demo.rs  vector_demo.rs
crates/sui-dev/web/: README.md  Trunk.toml  index.html
crates/sui-js/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/sui-js/examples/: counter.js  custom-widget.js  external-surface.js
crates/sui-js/src/: generated_widgets.rs  lib.rs
crates/sui-js/tests/: consumer.js
crates/sui-layout/: Cargo.toml
crates/sui-layout/src/: grid.rs  lib.rs
crates/sui-lucide/: Cargo.toml  build.rs
crates/sui-lucide/src/: lib.rs
crates/sui-platform/: Cargo.toml
crates/sui-platform-windows/: Cargo.toml
crates/sui-platform-windows/src/: dxgi.rs  lib.rs
crates/sui-platform/src/: accessibility.rs  android_clipboard.rs  desktop.rs  display_capabilities.rs  file_dialog.rs  headless.rs  lib.rs  os_clipboard.rs  web_interop.rs  windows_accessibility.rs
crates/sui-platform/src/display_capabilities/: windows_display.rs
crates/sui-python/: Cargo.toml  README.md  pyproject.toml
crates/sui-python/examples/: counter.py  custom_widget.py  external_surface.py
crates/sui-python/src/: generated_widgets.rs  lib.rs
crates/sui-reactive/: Cargo.toml
crates/sui-reactive/src/: lib.rs
crates/sui-render-wgpu/: Cargo.toml
crates/sui-render-wgpu/src/: feathering.rs  gpu.rs  lib.rs  retained.rs  scene.rs  text.rs
crates/sui-render-wgpu/src/scene/: windows_surface.rs
crates/sui-runtime/: Cargo.toml
crates/sui-runtime/src/: command.rs  diagnostics.rs  lib.rs  logo.rs  overlay.rs  reactive.rs  widget.rs
crates/sui-scene/: Cargo.toml
crates/sui-scene/src/: lib.rs  text.rs
crates/sui-testing/: Cargo.toml
crates/sui-testing/examples/: basic.rs
crates/sui-testing/src/: app.rs  diagnostics.rs  expect.rs  harness.rs  lib.rs  locator.rs  screenshot.rs  selector.rs  snapshot.rs  window.rs
crates/sui-testing/tests/: unit_flow.rs
crates/sui-text/: Cargo.toml
crates/sui-text/assets/: README.md
crates/sui-text/src/: cache.rs  flatten.rs  font.rs  layout.rs  lib.rs  model.rs  style.rs  system.rs  tests.rs
crates/sui-tui/: Cargo.toml
crates/sui-tui/src/: lib.rs  model.rs  render.rs  validate.rs
crates/sui-widget-book/: Cargo.toml
crates/sui-widget-book/src/: lib.rs  main.rs  visual_artifacts.rs
crates/sui-widget-book/tests/: desktop_e2e.rs  elevation_capture.rs  native_interaction_state.rs
crates/sui-widgets/: Cargo.toml
crates/sui-widgets/src/: animation.rs  canvas.rs  collection.rs  composites.rs  containers.rs  controls.rs  data.rs  drag_drop.rs  editor.rs  hdr_theme.rs  layout_policy.rs  lib.rs  media.rs  overlay.rs  panes.rs  reorderable.rs  rich_document.rs  rich_text.rs  selection.rs  text_align.rs  text_command.rs  text_surface.rs  theme.rs  workspace.rs
crates/sui-widgets/src/rich_document/: view.rs
crates/sui/examples/: commands.rs  hello.rs  quickstart.rs  rich_document.rs  stateful_form.rs
crates/sui/src/: app.rs  composites.rs  containers.rs  controls.rs  lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: README.md  architecture.md  crate-architecture.md  design.md  examples.md  hdr-debugging.md  hdr-native-interface-manifesto.md  hdr-theme-token-schema-proposal.md  layout-and-overflow.md  layout-proposal.md  renderer-architecture.md  stack-hosts.md  testing.md  text-rendering-benchmarks.md  text-system.md  tile-compositor-proposal.md  tui.md  user-api.md
docs/api/: README.md  custom-widgets.md  getting-started.md  input-and-editing.md  overlays-and-desktop.md  platforms-and-features.md  rich-documents.md  state-events-and-async.md  testing-and-accessibility.md  themes-and-resources.md  virtual-collections.md  widgets-and-layout.md
docs/branding/: sui-logo-preview.html
docs/plans/: 2026-04-19-hdr-debugging-pipeline.md  README.md  accessibility-generated-sui-tui-plan.md  animation-system-implementation-plan.md  cross-language-bindings-plan.md  hdr-debugging-pipeline.md  hdr-theme-token-schema-implementation-plan.md  hdr-wide-gamut-display-proposal.md  layer-boundary-transition.md  pathfinder-inspired-text-rendering-plan.md
docs/tutorials/: README.md  quickstart.md  stateful-form.md
test_hdr_image/: Cargo.toml
test_hdr_image/src/: main.rs
tools/text-rendering-compare/: compare.mjs
