[workspace]
resolver = "3"

members = [
    "crates/*",
]

[workspace.package]
authors = ["Infinity_X <Infinity_X@sinomo.net>"]
categories = ["gui", "graphics"]
edition = "2024"
homepage = "https://github.com/sinomo-lab/sui"
keywords = ["ui", "gui", "wgpu", "widgets", "graphics"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sinomo-lab/sui"
rust-version = "1.90"
version = "0.1.0"

[profile.release]
opt-level = 2
panic = "abort"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
accesskit = "0.24.1"
accesskit_consumer = "0.37.0"
accesskit_winit = { version = "0.33.1", default-features = false, features = ["rwh_06"] }
avif-serialize = "0.8.8"
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.18.2"
rav1e = { version = "0.8.1", default-features = false, features = ["threading"] }
resvg = { version = "0.47", default-features = false }
fontdb = "0.23"
js-sys = "0.3"
lyon_path = "1.0"
lyon_tessellation = "1.0"
napi = "3.10.3"
napi-build = "2.3.2"
napi-derive = "3.5.9"
palette = "0.7"
png = "0.17"
pollster = "0.4"
pyo3 = "0.29.0"
rustybuzz = "0.20"
swash = "0.2.7"
sui = { package = "sinomo-ui", version = "0.1.0", path = "crates/sui", default-features = false }
sui-animation = { version = "0.1.0", path = "crates/sui-animation" }
sui-avif = { version = "0.1.0", path = "crates/sui-avif" }
sui-bindings-core = { version = "0.1.0", path = "crates/sui-bindings-core" }
sui-core = { version = "0.1.0", path = "crates/sui-core" }
sui-debug = { version = "0.1.0", path = "crates/sui-debug" }
sui-demo = { version = "0.1.0", path = "crates/sui-demo" }
sui-js = { version = "0.1.0", path = "crates/sui-js" }
sui-layout = { version = "0.1.0", path = "crates/sui-layout" }
sui-lucide = { version = "1.17.0", path = "crates/sui-lucide" }
sui-platform = { version = "0.1.0", path = "crates/sui-platform" }
sui-platform-windows = { version = "0.1.0", path = "crates/sui-platform-windows" }
sui-python = { version = "0.1.0", path = "crates/sui-python" }
sui-render-wgpu = { version = "0.1.0", path = "crates/sui-render-wgpu" }
sui-runtime = { version = "0.1.0", path = "crates/sui-runtime" }
sui-scene = { version = "0.1.0", path = "crates/sui-scene" }
sui-testing = { version = "0.1.0", path = "crates/sui-testing" }
sui-text = { version = "0.1.0", path = "crates/sui-text" }
sui-tui = { version = "0.1.0", path = "crates/sui-tui" }
sui-widgets = { version = "0.1.0", path = "crates/sui-widgets" }
tiny-skia = "0.11"
unicode-segmentation = "1.12"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
web-time = "1"
ttf-parser = "0.25"
wgpu = "29.0.1"
winit = { version = "0.30.13", features = ["android-native-activity"] }
