[package]
name = "sinomo-ui-animation"
version.workspace = true
description = "Pure animation timeline and evaluator primitives for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_animation"

[dependencies]
sui-core = { workspace = true }
