[package]
name = "sui-avif"
version.workspace = true
description = "Minimal AVIF encoding primitives for SUI, with HDR still-image support."
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
avif-serialize = { workspace = true }
rav1e = { workspace = true }

[dev-dependencies]
avif-parse = "2"
