[package]
name = "sinomo-ui-avif"
version.workspace = true
description = "Minimal AVIF encoding primitives for SUI, with HDR still-image support."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
name = "sui_avif"

[dependencies]
avif-serialize = { workspace = true }
rav1e = { workspace = true }

[dev-dependencies]
avif-parse = "2"
