[package]
name = "sui-bindings-core"
version.workspace = true
description = "Language-neutral binding infrastructure for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
desktop = ["sui/desktop"]

[dependencies]
png = { workspace = true }
sui = { workspace = true }
