[package]
name = "sinomo-ui-bindings-core"
version.workspace = true
description = "Language-neutral binding infrastructure for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
desktop = ["sui/desktop"]

[lib]
name = "sui_bindings_core"

[dependencies]
png = { workspace = true }
sui = { workspace = true }
