[package]
name = "sinomo-ui-core"
version.workspace = true
description = "Shared core contracts and data types for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_core"

[dependencies]
