[package]
name = "sinomo-ui-debug"
version.workspace = true
description = "Debugging and inspection widgets for SUI applications."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_debug"

[dependencies]
sui-core = { workspace = true }
sui-layout = { workspace = true }
sui-platform = { workspace = true }
sui-reactive = { workspace = true }
sui-runtime = { workspace = true }
sui-scene = { workspace = true }
sui-widgets = { workspace = true }
