[package]
name = "sui-demo"
version.workspace = true
description = "Demo, widget gallery, and smoke-test binary for the SUI workspace."
edition.workspace = true
rust-version.workspace = true
publish = false
default-run = "sui-demo"

[features]
default = ["native", "tui", "artifacts"]
native = ["sui/desktop", "sui/wgpu"]
tui = ["dep:crossterm", "dep:ratatui", "dep:sui-tui"]
web = ["sui/web", "sui/wgpu"]
artifacts = ["dep:sui-render-wgpu"]

[lib]
name = "sui_demo_app"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sui-demo"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "sui-demo-artifacts"
path = "src/artifacts.rs"
required-features = ["artifacts"]

[dependencies]
sui = { path = "../sui", default-features = false }
sui-debug = { workspace = true }
sui-runtime = { workspace = true }
sui-scene = { workspace = true }
sui-render-wgpu = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.29", optional = true }
sui-testing = { workspace = true }
sui-tui = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Location", "Document", "Navigator", "HtmlCollection", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData"] }

[dev-dependencies]
png = "0.17"
sui-platform = { workspace = true }
sui-render-wgpu = { workspace = true }
sui-scene = { workspace = true }
winit = { workspace = true }
