[package]
name = "sui-dev"
version.workspace = true
description = "Playground and smoke-test binary for the SUI workspace."
edition.workspace = true
rust-version.workspace = true
publish = false
default-run = "sui-dev"

[[bin]]
name = "sui-dev"
path = "src/main.rs"

[dependencies]
sui = { workspace = true }
sui-widget-book = { workspace = true }

[dev-dependencies]
sui-scene = { workspace = true }
sui-testing = { workspace = true }