[package]
name = "sinomo-ui-js"
version.workspace = true
description = "JavaScript bindings for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[features]
default = ["desktop"]
desktop = ["sui/desktop", "sui-bindings-core/desktop"]

[lib]
name = "sui_js"
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
sui = { workspace = true }
sui-bindings-core = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
