[package]
name = "sinomo-ui-layout"
version.workspace = true
description = "Layout constraints and helpers for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_layout"

[dependencies]
sui-core = { workspace = true }
sui-scene = { workspace = true }
sui-text = { workspace = true }
