[package]
name = "sinomo-ui-lucide"
version = "1.17.1"
description = "Embedded Lucide SVG icon resources for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file = "assets/LICENSE"
build = "build.rs"

[lib]
name = "sui_lucide"

[dependencies]
sui-core = { workspace = true }
sui-runtime = { workspace = true }
sui-scene = { workspace = true }

[build-dependencies]
roxmltree = "0.21.1"
svgtypes = "0.16.1"

[dev-dependencies]
sui-layout = { workspace = true }
