[package]
name = "sinomo-ui-platform-windows"
version.workspace = true
description = "Windows Advanced Color / DXGI probing helpers for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_platform_windows"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Devices_Display", "Win32_Foundation", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi"] }
wgpu = { workspace = true }
