[package]
name = "sui-platform"
version.workspace = true
description = "Platform shell and event normalization boundary for SUI."
edition.workspace = true
rust-version.workspace = true

[dependencies]
sui-core = { workspace = true }
sui-render-wgpu = { workspace = true }
sui-runtime = { workspace = true }
winit = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console", "Window", "Location"] }
web-time = { workspace = true }
sui-platform-windows = { path = "../sui-platform-windows" }

[dev-dependencies]
sui-layout = { path = "../sui-layout" }
