[package]
name = "sui-platform"
version.workspace = true
description = "Platform shell and event normalization boundary for SUI."
edition.workspace = true
rust-version.workspace = true

[dependencies]
sui-core = { workspace = true }
sui-render-wgpu = { workspace = true }
sui-runtime = { workspace = true }
wgpu = { workspace = true }
js-sys = { workspace = true }
winit = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console", "CanvasRenderingContext2d", "Document", "DomRect", "Element", "HtmlCanvasElement", "HtmlHeadElement", "HtmlImageElement", "Location", "MediaQueryList", "Node", "Window"] }
web-time = { workspace = true }
sui-platform-windows = { path = "../sui-platform-windows" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
resvg = { workspace = true }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
arboard = { version = "3.6", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
accesskit = { workspace = true }
accesskit_winit = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
accesskit_consumer = { workspace = true }
sui-layout = { path = "../sui-layout" }
