[package]
name = "sinomo-ui-platform"
version.workspace = true
description = "Platform shell and event normalization boundary for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_platform"

[dependencies]
sui-core = { workspace = true }
sui-render-wgpu = { workspace = true }
sui-runtime = { workspace = true }
wgpu = { workspace = true }
js-sys = { workspace = true }
winit = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console", "CanvasRenderingContext2d", "Document", "DomRect", "Element", "HtmlCanvasElement", "HtmlHeadElement", "HtmlImageElement", "Location", "MediaQueryList", "Node", "Window"] }
web-time = { workspace = true }

[target.'cfg(any(target_arch = "wasm32", target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
rfd = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
resvg = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
arboard = { version = "3.6.1", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
accesskit = { workspace = true }
accesskit_winit = { workspace = true }
unicode-segmentation = { workspace = true }
windows = { version = "0.62.2", features = ["Win32_Devices_Display", "Win32_Foundation", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi"] }

[dev-dependencies]
accesskit_consumer = { workspace = true }
sui-layout = { workspace = true }
