[package]
name = "sui-python"
version.workspace = true
description = "Python bindings for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_python"
crate-type = ["cdylib", "rlib"]

[features]
default = ["desktop"]
desktop = ["sui/desktop", "sui-bindings-core/desktop"]
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]

[dependencies]
pyo3 = { workspace = true }
sui = { workspace = true }
sui-bindings-core = { workspace = true }

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
