[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "sui-ui"
version = "0.2.0"
description = "Python bindings for SUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: User Interfaces",
]

[tool.maturin]
bindings = "pyo3"
module-name = "sui"
features = ["extension-module", "desktop"]
