[package]
name = "sui-render-wgpu"
version.workspace = true
description = "wgpu renderer boundary for SUI scene frames."
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck = { workspace = true }
half = "2"
fontdb = { workspace = true }
lyon_path = { workspace = true }
lyon_tessellation = { workspace = true }
pollster = { workspace = true }
swash = { workspace = true, features = ["scale", "render"] }
sui-core = { workspace = true }
sui-scene = { workspace = true }
sui-text = { workspace = true }
tiny-skia = { workspace = true }
ttf-parser = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-time = { workspace = true }
