[package]
name = "sinomo-ui-render-wgpu"
version.workspace = true
description = "wgpu renderer boundary for SUI scene frames."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_render_wgpu"

[dependencies]
bytemuck = { workspace = true }
half = "2"
fontdb = { workspace = true }
lyon_path = { workspace = true }
lyon_tessellation = { workspace = true }
pollster = { workspace = true }
swash = { workspace = true, features = ["scale", "render"] }
sui-core = { workspace = true }
sui-scene = { workspace = true }
sui-text = { workspace = true }
tiny-skia = { workspace = true }
ttf-parser = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-time = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
sui-platform-windows = { workspace = true }
