[package]
name = "sinomo-ui-runtime"
version.workspace = true
description = "Retained runtime and widget contracts for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_runtime"

[dependencies]
sui-core = { workspace = true }
sui-layout = { workspace = true }
sui-reactive = { workspace = true }
sui-scene = { workspace = true }
sui-text = { workspace = true }
web-time = { workspace = true }
