[package]
name = "sui-scene"
version.workspace = true
description = "Rendering-neutral scene representation for SUI."
edition.workspace = true
rust-version.workspace = true

[dependencies]
fontdb = { workspace = true }
rustybuzz = { workspace = true }
sui-core = { workspace = true }
ttf-parser = { workspace = true }