[package]
name = "sinomo-ui-scene"
version.workspace = true
description = "Rendering-neutral scene representation for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_scene"

[dependencies]
resvg = { workspace = true }
sui-core = { workspace = true }
sui-text = { workspace = true }
