[package]
name = "sui-testing"
version.workspace = true
description = "Deterministic in-process UI automation for SUI."
edition.workspace = true
rust-version.workspace = true

[dependencies]
png = "0.17"
exr = "1"
ravif = { version = "0.13", default-features = false, features = ["threading"] }
sui-core = { workspace = true }
sui-layout = { workspace = true }
sui-platform = { workspace = true }
sui-render-wgpu = { workspace = true }
sui-runtime = { workspace = true }
sui = { workspace = true }
sui-scene = { workspace = true }
winit = { workspace = true }
