[package]
name = "sinomo-ui-testing"
version.workspace = true
description = "Deterministic in-process UI automation for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sui_testing"

[dependencies]
png = { workspace = true }
exr = "1"
sui-avif = { workspace = true }
sui-core = { workspace = true }
sui-layout = { workspace = true }
sui-platform = { workspace = true }
sui-render-wgpu = { workspace = true }
sui-runtime = { workspace = true }
sui = { workspace = true }
sui-scene = { workspace = true }
winit = { workspace = true }
