[package]
name = "sui-text"
version.workspace = true
description = "Text shaping, font registration, and layout for SUI."
edition.workspace = true
rust-version.workspace = true

[dependencies]
fontdb = { workspace = true }
rustybuzz = { workspace = true }
sui-core = { workspace = true }
ttf-parser = { workspace = true }