[package]
name = "sui-text"
version.workspace = true
description = "Text shaping, font registration, and layout for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cosmic-text = { workspace = true }
fontdb = { workspace = true }
rustybuzz = { workspace = true }
sui-core = { workspace = true }
ttf-parser = { workspace = true }
