[package]
name = "sui-tui"
version.workspace = true
description = "Accessibility-tree generated terminal UI support for SUI."
edition.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sui-core = { workspace = true }
sui-platform = { workspace = true }
